--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "cookie-parser": "^1.4.3",
     "debug": "^4.1.1",
     "express": "^4.15.3",
+    "mongodb": "^3.5.5",
+    "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
+    "nanoid": "^3.1.3",
     "node-sass": "^4.13.1",
     "pug": "^2.0.4",
     "react": "^16.13.1",
