Add API calls to create user

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "^1.4.3",
     "debug": "^4.1.1",
     "express": "^4.15.3",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
