--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
     "nanoid": "^3.1.3",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "pug": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -27,10 +27,10 @@
     "concurrently": "^5.1.0",
     "esm": "^3.2.25",
     "nodemon": "^2.0.3",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"nodemon -r esm server/server.js\"",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
